--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <div class="play-button">
                         <div class="play-icon"></div>
                       </div>
-                    <img src="/Spotify/covers/1.jpeg" alt="Jhol Album Cover" class="album-image">
+                    <img src="/covers/1.jpeg" alt="Jhol Album Cover" class="album-image">
                     <div class="album-info">
                         <h3 class="album-name">Late Night</h3>
                         <p class="album-artist"><a href="#">Maanu</a>, <a href="#">Annural Khalid</a></p>
