--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <div class="play-button">
                         <div class="play-icon"></div>
                       </div>
-                    <img src="/Spotify/covers/2.jpeg" alt="Making Memories Album Cover" class="album-image">
+                    <img src="covers/2.jpeg" alt="Making Memories Album Cover" class="album-image">
                     <div class="album-info">
                         <h3 class="album-name">Hip Te Hop</h3>
                         <p class="album-artist"><a href="#">Sidhu Moose Wala                        </a></p>
@@ -205,7 +205,7 @@
                     <div class="play-button">
                         <div class="play-icon"></div>
                       </div>
-                    <img src="/Spotify/covers/5.jpeg" alt="ROCKSTAR WITHOUT A GUITAR Album Cover"
+                    <img src="/Spotify/5.jpeg" alt="ROCKSTAR WITHOUT A GUITAR Album Cover"
                         class="album-image">
                     <div class="album-info">
                         <h3 class="album-name">Sad Song 🥀💔</h3>
