--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     <div class="play-button">
                         <div class="play-icon"></div>
                       </div>
-                    <img src="/Spotify/covers/4.jpeg" alt="Still Rollin Album Cover" class="album-image">
+                    <img src="Spotify/covers/4.jpeg" alt="Still Rollin Album Cover" class="album-image">
                     <div class="album-info">
                         <h3 class="album-name">Aam Jahe Munde</h3>
                         <p class="album-artist"><a href="#">Pardhaan</a>,<a href="#">Parmish Verma</a></p>
